--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "server": "json-server --watch src/data/db.json --port 5000",
     "lint": "eslint --fix src/**/*.{js,ts,vue}",
     "format": "prettier --write \"src/**/*.{js,ts,vue}\""
-    
   },
   "dependencies": {
+    "portal-vue": "^3.0.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
